<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vl53l1x</name>
  <version>0.0.1</version>
  <description>A ROS 2 package for the VL53L1X Time-of-Flight sensor using a centralized TCA9548A multiplexer.</description>
  <maintainer email="medlaodip@gmail.com">Syndric</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pluginlib</depend>
  <depend>tca9548a</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  
  </export>
</package>